# ipt

./: .gitignore  .pylintrc  Connectly week-1-2-crud.postman_collection.json  Connectly week-3-validation-and-relationships.postman_collection.json  Connectly week-4-security.postman_collection.json  Connectly.postman_collection.json  README.md  pyproject.toml  requirements.txt  week-5-design-patterns.postman_collection.json
connectly_project/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/factories/: post_factory.py
posts/migrations/: 0001_initial.py  0002_alter_post_author.py  0003_comment.py  0003_user_created_at_user_updated_at.py  0004_user_created_at_user_updated_at.py  0005_merge_20260206_0455.py  0005_merge_20260206_1316.py  0006_alter_post_author_alter_comment_author_delete_user.py  0007_post_post_type.py  0008_post_metadata.py
posts/singletons/: config_manager.py  logger_singleton.py
