[project]
name = "Connectly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "black>=26.1.0",
    "django>=5.2.11",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "pyopenssl>=25.3.0",
    "werkzeug>=3.1.5",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
